# OliviaVideo

./: readme.md
OliviaVideo/: AppDelegate.swift  Bridge-Header.h  Bridge.m  Info.plist  c_style_decoder.cpp  cvdisplay.cpp  cvdisplay.h  decoder.cpp  decoder.h  file_decoder.cpp  main.cpp  stream_decoder.cpp  stream_decoder.h  stream_reciver.cpp  stream_reciver.h
OliviaVideo.xcodeproj/: project.pbxproj
OliviaVideo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
OliviaVideo/Base.lproj/: MainMenu.xib
OliviaVideoTests/: OliviaVideoTests.swift
iOVideo/: AppDelegate.swift  Info.plist  bridge_core.h  bridge_core.mm  oliviaosx-Bridging-Header.h  view_test.swift
iOVideo/Base.lproj/: MainMenu.xib
iOVideoTests/: Info.plist  iOVideoTests.swift
oliviacapture/: CMakeLists.txt  network.sh  proctol.md
oliviacapture/oliviacapture/: capcamera.cpp  capcamera.h  display.cpp  display.h  encoder.cpp  encoder.h  headers.h  main.cpp  videostream.cpp  videostream.h
oliviacapture/oliviacapture.xcodeproj/: project.pbxproj
oliviacapture/oliviacapture.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
oliviacapture/oliviacapture.xcodeproj/project.xcworkspace/xcshareddata/: oliviacapture.xccheckout
oliviacapture/oliviacapture.xcodeproj/xcuserdata/xuhao.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
oliviacapture/oliviacapture.xcodeproj/xcuserdata/xuhao.xcuserdatad/xcschemes/: oliviacapture.xcscheme  oliviacapture_pro.xcscheme  xcschememanagement.plist
test_quartz/: AppDelegate.swift  quartz_view_control.swift
test_quartzTests/: test_quartzTests.swift
(+3 files in other folders)
